--- a/packages/client/src/theme/var.scss
+++ b/packages/client/src/theme/var.scss
@@ -1,3 +1,12 @@
 $primaryColor: #ff0064;
-$feMainColor: #ff0064;
-$feBgColor: #fff0f6;
+
+$linkColor: #4299e1;
+
+$textMainColor: rgba(0, 0, 0, 0.85);
+$textSecondColor: rgba(0, 0, 0, 0.65);
+$textDisableColor: rgba(0, 0, 0, 0.45);
+
+$borderColor: rgba(178, 186, 194, 0.15);
+$borderRadius: 2px;
+
+$boxShadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
