--- a/packages/client/pages/archives/index.module.scss
+++ b/packages/client/pages/archives/index.module.scss
@@ -10,6 +10,37 @@
 
   .main {
     background-color: #fff;
+
+    .summary {
+      padding: 16px 0;
+      background-color: #fff;
+      border-bottom: 1px solid $borderColor;
+      text-align: center;
+
+      i {
+        font-size: 2.5rem;
+        color: $textDisableColor;
+      }
+
+      p {
+        margin-bottom: 0;
+
+        &:first-of-type {
+          margin-top: 0.5rem;
+          span {
+            font-size: 1.5rem;
+            color: $primaryColor;
+          }
+        }
+
+        &:last-of-type {
+          span {
+            font-size: 1.1rem;
+            color: $primaryColor;
+          }
+        }
+      }
+    }
   }
 
   .aside {
