--- a/packages/client/pages/article/index.module.scss
+++ b/packages/client/pages/article/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../src/theme/var.scss';
+
 .container {
   margin-top: 40px;
 }
@@ -44,34 +46,63 @@
     margin: 0 auto;
     padding: 0 16px;
 
+    .articleInfo {
+      blockquote {
+        display: block;
+        width: 100%;
+        font-size: 14px;
+        color: $textDisableColor;
+        border-left: 4px solid $textDisableColor;
+        padding: 12px 24px 12px 12px;
+        margin-top: 1em;
+        border-left-width: 4px;
+        border-left-style: solid;
+        background-color: #f8f8f8;
+        position: relative;
+        border-bottom-right-radius: $borderRadius;
+        border-top-right-radius: $borderRadius;
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+
     .articleFooter {
       display: flex;
       justify-content: space-between;
       margin-top: 30px;
-      border-top: 1px solid #ebebeb;
+      border-top: 1px dashed $borderColor;
       padding: 21px 0;
-      color: #b3b3b3;
+      color: $textSecondColor;
       line-height: 28px;
 
       .tags {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
         .tag {
           display: inline-flex;
           align-items: center;
           background-color: #fff;
+          border: 1px solid $borderColor;
+          padding: 0 8px;
           border-radius: 2px;
           font-size: 14px;
-          text-decoration: underline;
+          text-decoration: none;
 
-          img {
-            width: 1.75rem;
-            height: 1.75rem;
-            border-radius: 2px;
+          &:hover {
+            color: #fff;
+            background-color: $primaryColor;
+          }
+
+          & + .tag {
+            margin-left: 0.8rem;
           }
 
           span {
-            padding: 0 0.75rem;
-            line-height: 1.75rem;
-            color: #919191;
+            margin-left: 8px;
           }
         }
       }
@@ -91,7 +122,7 @@
 
   .widget {
     background: #ffffff;
-    border: 1px solid #ebebeb;
+    border: 1px solid $borderColor;
     padding: 21px 30px;
     margin-bottom: 24px;
   }
