--- a/packages/client/pages/index.module.scss
+++ b/packages/client/pages/index.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   background-color: #f4f5f5;
-  min-height: calc(100vh - 64px);
+  min-height: calc(100vh + 100px);
 }
 
 .container {
@@ -26,16 +26,14 @@
       width: 21.5rem;
       padding: 0 0 0 1.5rem;
 
-      > div {
-        &.isFixed {
-          position: fixed;
-          top: 1rem;
-          width: 20rem;
-        }
+      div.isFixed {
+        position: fixed;
+        top: 1rem;
+        width: 20rem;
       }
 
       .footer {
-        border-top: 1px solid #e5e5e5;
+        border-top: 1px solid $borderColor;
         background-color: transparent;
         color: #8e8787;
       }
@@ -49,6 +47,37 @@
 
     .aside {
       display: none;
+    }
+  }
+}
+
+.tagOrCategoryDetail {
+  padding: 16px 0;
+  background-color: #fff;
+  text-align: center;
+  margin-bottom: 1rem;
+
+  i {
+    font-size: 2.5rem;
+    color: $textDisableColor;
+  }
+
+  p {
+    margin-bottom: 0;
+
+    &:first-of-type {
+      margin-top: 0.5rem;
+      span {
+        font-size: 1.5rem;
+        color: $primaryColor;
+      }
+    }
+
+    &:last-of-type {
+      span {
+        font-size: 1.1rem;
+        color: $primaryColor;
+      }
     }
   }
 }
