--- a/packages/client/src/components/CommentAndRecommendArticles/index.module.scss
+++ b/packages/client/src/components/CommentAndRecommendArticles/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../theme/var.scss';
+
 .wrapper {
   background: #f4f4f4;
   padding: 40px 0;
@@ -13,13 +15,12 @@
     font-size: 16px;
     line-height: 22px;
     letter-spacing: 0.06em;
-    color: #655e5e;
+    color: $textMainColor;
     margin-bottom: 30px;
     text-align: center;
   }
 
   .commentContainer {
-    // background: #f1f6f9;
     border-radius: 4px;
     margin-bottom: 35px;
   }
@@ -35,13 +36,12 @@
     font-size: 16px;
     line-height: 22px;
     letter-spacing: 0.06em;
-    color: #655e5e;
+    color: $textMainColor;
     margin-bottom: 30px;
     text-align: center;
   }
 
   .articleContainer {
-    // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   }
 
   @media (max-width: 768px) {
