--- a/packages/client/src/components/Header/index.module.scss
+++ b/packages/client/src/components/Header/index.module.scss
@@ -10,7 +10,7 @@ $height: 64px;
 
 .wrapper {
   width: 100vw;
-  border-bottom: 1px solid #f1f1f1;
+  border-bottom: 1px solid $borderColor;
   background-color: #fff;
 
   &.isFixed {
@@ -24,7 +24,7 @@ $height: 64px;
   }
 
   &.boxShadow {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: $boxShadow;
   }
 
   > div {
@@ -37,7 +37,7 @@ $height: 64px;
     height: $height;
     line-height: $height;
     text-align: left;
-    color: #333;
+    color: $textMainColor;
     margin-right: 2rem;
 
     img {
@@ -54,9 +54,9 @@ $height: 64px;
     .stick {
       width: 25px;
       height: 4px;
-      background-color: #ff0064;
+      background-color: $primaryColor;
       opacity: 1;
-      border-radius: 5px;
+      border-radius: $borderRadius;
       transition: all 250ms ease-in-out 0s;
 
       &:nth-of-type(2) {
@@ -86,7 +86,7 @@ $height: 64px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #333;
+    color: $textMainColor;
     font-size: 16px;
 
     ul {
@@ -172,8 +172,8 @@ $height: 64px;
       &.active {
         max-height: 100vh;
         overflow: auto;
-        border-top: 1px solid #eee;
-        border-bottom: 1px solid #eee;
+        border-top: 1px solid $borderColor;
+        border-bottom: 1px solid $borderColor;
       }
 
       ul {
