--- a/packages/client/src/components/Search/index.module.scss
+++ b/packages/client/src/components/Search/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../theme/var.scss';
+
 .container {
   display: flex;
   align-items: center;
@@ -57,8 +59,8 @@
     position: relative;
     width: 100%;
     margin-bottom: 40px;
-    border-bottom: 1px solid #ccc;
-    color: #000;
+    border-bottom: 1px solid $borderColor;
+    color: $textMainColor;
 
     &.active {
     }
