bugfix(client): update markdown padding style

--- a/packages/client/src/theme/markdown.scss
+++ b/packages/client/src/theme/markdown.scss
@@ -2,7 +2,8 @@
 
 :global {
   .markdown {
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
     color: $textMainColor !important;
     background-color: #fff !important;
     overflow: hidden !important;
