--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -123,7 +123,7 @@
       .imgWrapper {
         flex: 0 0 auto;
         width: 220px;
-        min-height: 110px;
+        height: 110px;
         margin-right: 1rem;
         background-color: #fff;
         border-radius: $borderRadius;
@@ -135,6 +135,11 @@
           height: 100%;
           object-fit: cover;
         }
+      }
+
+      .textInfoWrapper {
+        flex: 1;
+        overflow: hidden;
       }
 
       .title {
@@ -150,10 +155,14 @@
       }
 
       .desc {
-        width: 100%;
+        max-width: 100%;
         font-size: 14px;
         margin: 0;
         color: $textSecondColor;
+
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
 
       .meta {
