--- a/packages/client/src/components/Tags/index.module.scss
+++ b/packages/client/src/components/Tags/index.module.scss
@@ -1,17 +1,17 @@
 @import '../../theme/var.scss';
 
 .wrapper {
-  box-shadow: $boxShadow;
-  border-radius: $borderRadius;
   margin-bottom: 1.3rem;
   line-height: 1.29;
+  background-color: var(--bg-second);
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
 
   .title {
     padding: 1rem 1.3rem;
-    background-color: #fff;
-    color: $textMainColor;
+    color: var(--main-text-color);
     font-weight: bold;
-    border-bottom: 1px solid hsla(0, 0%, 59.2%, 0.1);
+    border-bottom: 1px solid var(--border-color);
 
     span {
       margin-left: 8px;
@@ -20,30 +20,28 @@
 
   ul {
     padding: 1rem;
-    background-color: #fff;
-    box-shadow: $boxShadow;
   }
 
   li {
     padding: 2px 7px;
-    color: $textSecondColor;
+    color: var(--second-text-color);
     line-height: 1.5em;
     display: inline-block;
     margin: 0 7px 7px 0;
-    border: 1px solid $borderColor;
-    border-radius: $borderRadius;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
     transition: all ease-in-out 0.2s;
 
     &:hover {
-      background-color: $primaryColor;
+      background-color: var(--primary-color);
       color: #fff;
-      border: 1px solid $primaryColor;
+      border: 1px solid var(--primary-color);
     }
 
     &.active {
       color: #fff;
-      border: 1px solid $primaryColor;
-      background-color: $primaryColor;
+      border: 1px solid var(--primary-color);
+      background-color: var(--primary-color);
     }
   }
 }
