--- a/packages/client/pages/archives/index.module.scss
+++ b/packages/client/pages/archives/index.module.scss
@@ -1,25 +1,25 @@
 @import '../../src/theme/var.scss';
 
 .wrapper {
-  background-color: #f4f5f5;
+  background-color: var(--bg);
 }
 
 .container {
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
 
   .main {
-    background-color: #fff;
+    background-color: var(--bg-second);
 
     .summary {
       padding: 16px 0;
-      background-color: #fff;
-      border-bottom: 1px solid $borderColor;
+      background-color: var(--bg-second);
+      border-bottom: 1px solid var(--border-color);
       text-align: center;
 
       i {
         font-size: 2.5rem;
-        color: $textDisableColor;
+        color: var(--disable-text-color);
       }
 
       p {
@@ -29,14 +29,14 @@
           margin-top: 0.5rem;
           span {
             font-size: 1.5rem;
-            color: $primaryColor;
+            color: var(--primary-color);
           }
         }
 
         &:last-of-type {
           span {
             font-size: 1.1rem;
-            color: $primaryColor;
+            color: var(--primary-color);
           }
         }
       }
@@ -70,6 +70,7 @@
 
   h2 {
     font-size: 1.5rem;
+    color: var(--main-text-color);
   }
 
   .item {
@@ -104,26 +105,26 @@
         width: 6px;
         height: 6px;
         margin-left: -4px;
-        background: #333;
+        background: var(--disable-text-color);
         border-radius: 50%;
       }
 
       &:hover {
-        color: $primaryColor;
+        color: var(--primary-color);
 
         .title,
         .meta {
-          color: $primaryColor;
+          color: var(--primary-color);
         }
 
         &::before {
-          background-color: $primaryColor;
+          background-color: var(--primary-color);
         }
       }
     }
 
     .title {
-      color: #292525;
+      color: var(--main-text-color);
       font-weight: 600;
       font-size: 1rem;
       line-height: 1.4;
@@ -133,11 +134,15 @@
       white-space: nowrap;
     }
 
+    h3 {
+      color: var(--second-text-color);
+    }
+
     .meta {
       font-size: 0.8rem;
       padding-right: 1em;
       margin: 0;
-      color: #333;
+      color: var(--second-text-color);
     }
   }
 }
