--- a/packages/client/pages/article/index.module.scss
+++ b/packages/client/pages/article/index.module.scss
@@ -2,25 +2,26 @@
 
 .container {
   margin-top: 40px;
+  // background-color: var(--bg-second);
 }
 
 .meta {
   text-align: center;
 
   .title {
-    margin: 0.67em 0;
+    margin: 0.67em 0 0;
     font-size: 2.5rem;
     line-height: 1rem;
     font-weight: 700;
     line-height: 1.5;
-    color: #000;
+    color: var(--main-text-color);
     text-align: center;
   }
 
   .desc {
     font-style: italic;
-    color: #929292;
-    margin-bottom: 0.67em;
+    color: var(--second-text-color);
+    margin-bottom: 1.2em;
     text-align: center;
   }
 
@@ -41,7 +42,7 @@
   position: relative;
 
   .content {
-    background: #fff;
+    background: var(--bg);
     max-width: 800px;
     margin: 0 auto;
     padding: 0 16px;
@@ -51,16 +52,16 @@
         display: block;
         width: 100%;
         font-size: 14px;
-        color: $textDisableColor;
-        border-left: 4px solid $textDisableColor;
+        color: var(--disable-text-color);
+        border-left: 4px solid var(--disable-text-color);
         padding: 12px 24px 12px 12px;
         margin-top: 1em;
         border-left-width: 4px;
         border-left-style: solid;
-        background-color: #f8f8f8;
+        background-color: var(--bg-second);
         position: relative;
-        border-bottom-right-radius: $borderRadius;
-        border-top-right-radius: $borderRadius;
+        border-bottom-right-radius: var(--border-radius);
+        border-top-right-radius: var(--border-radius);
 
         p {
           margin: 0;
@@ -72,9 +73,9 @@
       display: flex;
       justify-content: space-between;
       margin-top: 30px;
-      border-top: 1px dashed $borderColor;
+      border-top: 1px dashed var(--border-color);
       padding: 21px 0;
-      color: $textSecondColor;
+      color: var(--second-text-color);
       line-height: 28px;
 
       .tags {
@@ -85,8 +86,9 @@
         .tag {
           display: inline-flex;
           align-items: center;
-          background-color: #fff;
-          border: 1px solid $borderColor;
+          color: var(--second-text-color);
+          background-color: var(--bg-second);
+          border: 1px solid var(--border-color);
           padding: 0 8px;
           border-radius: 2px;
           font-size: 14px;
@@ -94,7 +96,7 @@
 
           &:hover {
             color: #fff;
-            background-color: $primaryColor;
+            background-color: var(--primary-color);
           }
 
           & + .tag {
@@ -122,7 +124,7 @@
 
   .widget {
     background: #ffffff;
-    border: 1px solid $borderColor;
+    border: 1px solid var(--border-color);
     padding: 21px 30px;
     margin-bottom: 24px;
   }
