--- a/packages/client/pages/index.module.scss
+++ b/packages/client/pages/index.module.scss
@@ -1,7 +1,7 @@
 @import '../src/theme/var.scss';
 
 .wrapper {
-  background-color: #f4f5f5;
+  background-color: var(--bg-body);
   min-height: calc(100vh + 100px);
 }
 
@@ -33,9 +33,9 @@
       }
 
       .footer {
-        border-top: 1px solid $borderColor;
+        border-top: 1px solid var(--border-color);
         background-color: transparent;
-        color: #8e8787;
+        color: var(--disable-text-color);
       }
     }
   }
@@ -53,13 +53,13 @@
 
 .tagOrCategoryDetail {
   padding: 16px 0;
-  background-color: #fff;
+  background: var(--bg-second);
   text-align: center;
   margin-bottom: 1rem;
 
   i {
     font-size: 2.5rem;
-    color: $textDisableColor;
+    color: var(--disable-text-color);
   }
 
   p {
@@ -67,16 +67,17 @@
 
     &:first-of-type {
       margin-top: 0.5rem;
+
       span {
         font-size: 1.5rem;
-        color: $primaryColor;
+        color: var(--primary-color);
       }
     }
 
     &:last-of-type {
       span {
         font-size: 1.1rem;
-        color: $primaryColor;
+        color: var(--primary-color);
       }
     }
   }
