--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -9,7 +9,8 @@
 
 .articleListItem {
   width: 100%;
-  background-color: #fff;
+  background-color: var(--bg-second);
+  box-shadow: var(--box-shadow);
   overflow: hidden;
   font-size: 0;
 
@@ -18,13 +19,12 @@
 
     > a {
       font-size: 1rem;
-      border-top: 1px dashed $borderColor;
     }
   }
 
   &.isBordered {
     > a {
-      border-top: 1px dashed $borderColor;
+      // border-top: 1px dashed var(--border-color);
     }
 
     + .isBordered {
@@ -36,13 +36,13 @@
 
   &.asCard {
     display: inline-flex;
-    width: 50%;
+    width: 49%;
+    box-shadow: var(--box-shadow);
 
     > a {
       position: relative;
       z-index: 10;
       flex-direction: column;
-      border: 1px solid $borderColor;
       padding: 0.5rem !important;
 
       .info {
@@ -60,7 +60,7 @@
     }
 
     &:nth-of-type(odd) {
-      padding-right: 1rem;
+      margin-right: 0.5%;
     }
 
     &:nth-of-type(2) {
@@ -68,7 +68,7 @@
     }
 
     &:nth-of-type(even) {
-      padding-left: 1rem;
+      margin-left: 0.5%;
     }
 
     &:nth-of-type(n + 3) {
@@ -77,8 +77,11 @@
 
     @media (max-width: 768px) {
       width: 100%;
-      padding-left: 0 !important;
-      padding-right: 0 !important;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      &:nth-of-type(2) {
+        margin-top: 1rem;
+      }
     }
 
     > a {
@@ -110,7 +113,7 @@
       }
 
       .info .title {
-        color: $primaryColor;
+        color: var(--primary-color);
       }
     }
 
@@ -125,8 +128,7 @@
         width: 220px;
         height: 110px;
         margin-right: 1rem;
-        background-color: #fff;
-        border-radius: $borderRadius;
+        border-radius: var(--border-radius);
         overflow: hidden;
 
         img {
@@ -144,7 +146,7 @@
 
       .title {
         position: relative;
-        color: $textMainColor;
+        color: var(--main-text-color);
         font-weight: 600;
         font-size: 20px;
         line-height: 1.4;
@@ -158,7 +160,7 @@
         max-width: 100%;
         font-size: 14px;
         margin: 0;
-        color: $textSecondColor;
+        color: var(--second-text-color);
 
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -169,7 +171,7 @@
         width: 100%;
         margin: 1rem 0 0;
         font-size: 14px;
-        color: $textSecondColor;
+        color: var(--second-text-color);
         clear: both;
 
         .seperator {
@@ -233,12 +235,12 @@
 
 .empty {
   width: 100%;
-  background: #f4f4f4;
+  background: var(--bg-second);
   text-align: center;
-  color: $textSecondColor;
+  color: var(--second-text-color);
   font-size: 14px;
   height: 60px;
   line-height: 60px;
   margin-bottom: 20px;
-  border-radius: $borderRadius;
+  border-radius: var(--border-radius);
 }
