--- a/packages/client/src/components/Comment/index.module.scss
+++ b/packages/client/src/components/Comment/index.module.scss
@@ -2,18 +2,24 @@
 
 .editor {
   padding: 16px;
-  background-color: #fff;
+  background-color: var(--bg-second);
   position: relative;
   margin-bottom: 16px;
 
   :global {
     .bf-container {
-      border: 1px solid #d9d9d9;
+      border: 1px solid var(--comment-editor-border-color);
       margin-bottom: 16px;
     }
 
     .bf-content {
       height: 200px;
+    }
+
+    .ant-btn-primary[disabled] {
+      color: var(--main-text-color);
+      border-color: var(--comment-editor-border-color);
+      background-color: var(--comment-editor-btn-diable-bg);
     }
   }
 
@@ -30,22 +36,9 @@
 
     input {
       width: 49%;
-    }
-  }
-
-  .controls {
-    text-align: right;
-    color: $textSecondColor;
-    font-size: 12px;
-
-    span {
-      cursor: pointer;
-    }
-
-    .divider {
-      margin: 0 16px;
-      display: inline-block;
-      transform: translateY(-1px);
+      color: var(--main-text-color);
+      background-color: var(--bg-second);
+      border-color: var(--comment-editor-border-color);
     }
   }
 
@@ -84,7 +77,7 @@
 
     .commentItem {
       position: relative;
-      background-color: #fff;
+      background-color: var(--bg-second);
       padding: 16px;
 
       + .commentItem {
@@ -95,7 +88,7 @@
         position: relative;
         display: flex;
         align-items: center;
-        color: $textSecondColor;
+        color: var(--second-text-color);
 
         > span.info {
           margin-left: 10px;
@@ -106,12 +99,12 @@
         }
 
         strong {
-          color: #1a1a1a;
+          color: var(--main-text-color);
           font-weight: 600;
         }
 
         strong.replyUser {
-          color: $primaryColor;
+          color: var(--primary-color);
         }
 
         > div:last-of-type {
@@ -128,7 +121,7 @@
 
         &:hover {
           > div:last-of-type {
-            color: #1a1a1a;
+            color: var(--main-text-color);
           }
         }
       }
@@ -139,7 +132,7 @@
         }
 
         div.meta {
-          color: $textDisableColor;
+          color: var(--disable-text-color);
 
           span + span {
             margin-left: 1rem;
@@ -149,7 +142,7 @@
             cursor: pointer;
 
             &:hover {
-              color: $primaryColor;
+              color: var(--primary-color);
             }
 
             i {
@@ -183,6 +176,7 @@
     margin-top: 16px;
     padding: 16px 0;
     text-align: center;
-    background-color: #fff;
+    color: var(--second-text-color);
+    background-color: var(--bg-second);
   }
 }
