--- a/packages/client/src/components/Footer/index.module.scss
+++ b/packages/client/src/components/Footer/index.module.scss
@@ -1,10 +1,10 @@
 @import '../../theme/var.scss';
 
 footer {
-  background: #292525;
+  background: var(--bg-footer);
   padding: 20px 0;
   text-align: center;
-  border-top: 1px solid $borderColor;
+  border-top: 1px solid var(--border-color);
   color: #c1bdbd;
 }
 
@@ -25,7 +25,7 @@ ul.icons {
     }
 
     &:hover {
-      color: $textMainColor;
+      color: var(--main-text-color);
     }
   }
 }
