--- a/packages/client/src/components/Header/index.module.scss
+++ b/packages/client/src/components/Header/index.module.scss
@@ -10,8 +10,8 @@ $height: 64px;
 
 .wrapper {
   width: 100vw;
-  border-bottom: 1px solid $borderColor;
-  background-color: #fff;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bg);
 
   &.isFixed {
     position: fixed;
@@ -24,7 +24,7 @@ $height: 64px;
   }
 
   &.boxShadow {
-    box-shadow: $boxShadow;
+    box-shadow: var(--box-shadow);
   }
 
   > div {
@@ -37,7 +37,7 @@ $height: 64px;
     height: $height;
     line-height: $height;
     text-align: left;
-    color: $textMainColor;
+    color: var(--main-text-color);
     margin-right: 2rem;
 
     img {
@@ -54,9 +54,9 @@ $height: 64px;
     .stick {
       width: 25px;
       height: 4px;
-      background-color: $primaryColor;
+      background-color: var(--primary-color);
       opacity: 1;
-      border-radius: $borderRadius;
+      border-radius: var(--border-radius);
       transition: all 250ms ease-in-out 0s;
 
       &:nth-of-type(2) {
@@ -86,7 +86,7 @@ $height: 64px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: $textMainColor;
+    color: var(--main-text-color);
     font-size: 16px;
 
     ul {
@@ -105,7 +105,7 @@ $height: 64px;
         }
 
         &.active {
-          color: $primaryColor;
+          color: var(--primary-color);
         }
 
         a {
@@ -114,10 +114,10 @@ $height: 64px;
         }
       }
 
-      .searchWrapper {
-        position: absolute;
-        top: 50%;
-        right: 0;
+      .searchWrapper,
+      .themeToggle {
+        float: right;
+        margin-top: 32px;
         transform: translateY(-50%);
       }
 
@@ -131,6 +131,10 @@ $height: 64px;
         transform: translateY(-1px);
       }
 
+      .themeToggle {
+        float: right;
+      }
+
       @media (max-width: 768px) {
         li {
           text-align: center;
@@ -140,14 +144,16 @@ $height: 64px;
           }
         }
 
-        .searchWrapper {
-          position: relative;
-          top: 0;
+        .searchWrapper,
+        .themeToggle {
+          float: none;
+          margin-top: 0;
           transform: translateY(0);
         }
 
-        .search {
-          margin: 24px auto;
+        .search,
+        .themeToggle button {
+          margin: 12px auto;
         }
       }
     }
@@ -159,21 +165,19 @@ $height: 64px;
       top: 100%;
       left: 0;
       z-index: 100;
-
       width: 100vw;
       padding: 0 15px;
-      background-color: #fff;
-
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.25s;
       margin-left: 0;
+      background-color: var(--bg);
 
       &.active {
         max-height: 100vh;
         overflow: auto;
-        border-top: 1px solid $borderColor;
-        border-bottom: 1px solid $borderColor;
+        border-top: 1px solid var(--border-color);
+        border-bottom: 1px solid var(--border-color);
       }
 
       ul {
@@ -183,10 +187,6 @@ $height: 64px;
           display: flex;
           padding: 0;
           line-height: 48px;
-
-          // &:first-of-type {
-          //   padding-left: 12px;
-          // }
         }
       }
     }
