--- a/packages/client/src/theme/reset.scss
+++ b/packages/client/src/theme/reset.scss
@@ -1,10 +1,12 @@
+@import './var.scss';
+
 ::-webkit-scrollbar-track {
   border-radius: 0;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 0;
-  background-color: #dadada;
+  background-color: var(--scrollbar-bg);
   transition: all 0.2s;
   border-radius: 0.5rem;
 }
@@ -39,7 +41,8 @@ html {
 
 body {
   font-family: 'Nunito', 'Helvetica', Arial, sans-serif;
-  color: #5f5f6f;
+  color: var(--main-text-color);
+  background-color: var(--bg);
   line-height: 1.75em;
   overflow-x: hidden;
 }
@@ -80,36 +83,6 @@ body {
   .container {
     margin-right: auto;
     margin-left: auto;
-  }
-
-  .ant-breadcrumb,
-  .ant-breadcrumb a {
-    color: rgba(0, 0, 0, 0.45) !important;
-  }
-
-  .ant-breadcrumb-separator {
-    color: rgba(0, 0, 0, 0.45) !important;
-  }
-
-  .ant-breadcrumb > span:last-child a {
-    color: rgba(0, 0, 0, 0.65) !important;
-  }
-
-  .ant-comment {
-    background-color: #fff;
-    padding: 0 16px 0px 4px;
-
-    + .ant-comment {
-      margin-top: 8px;
-    }
-
-    .ant-comment-inner {
-      border-bottom: 1px solid #f6f6f6;
-    }
-  }
-
-  .ant-anchor-wrapper {
-    background-color: transparent !important;
   }
 
   .braft-finder .bf-manager-footer {
