--- a/packages/client/src/theme/var.scss
+++ b/packages/client/src/theme/var.scss
@@ -9,7 +9,7 @@
     --bg-second: #fff;
     --bg-body: #f4f5f5;
     --bg-footer: #292525;
-    --bg-code: var(--bg);
+    --bg-code: var(--bg-body);
     --main-text-color: rgba(0, 0, 0, 0.85);
     --second-text-color: rgba(0, 0, 0, 0.65);
     --disable-text-color: rgba(0, 0, 0, 0.45);
