--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -216,18 +216,21 @@
     }
 
     > a {
+      position: relative;
+      z-index: 10;
       flex-direction: column;
-      padding: 1rem 0;
-
-      .imgWrapper {
-        width: 100%;
-        height: 180px;
-        margin-right: 0;
-      }
 
       .info {
         width: 100%;
         padding: 0;
+        flex-direction: column;
+
+        .imgWrapper {
+          width: 100%;
+          padding: 0;
+          margin-bottom: 1rem;
+          margin-right: 0;
+        }
       }
     }
   }
