--- a/packages/client/src/components/CommentAndRecommendArticles/index.module.scss
+++ b/packages/client/src/components/CommentAndRecommendArticles/index.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
   background: var(--bg-body);
   padding: 40px 0;
-  border: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
 }
 
 .comments {
