--- a/packages/admin/pages/article/editor/index.module.scss
+++ b/packages/admin/pages/article/editor/index.module.scss
@@ -12,7 +12,12 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 
     input {
-      border: 0 !important;
+      border-top: 0;
+      border-right: 0;
+      border-left: 0;
+      border-radius: 0 !important;
+      padding-left: 0;
+      padding-right: 0;
       box-shadow: none !important;
     }
   }
