--- a/packages/admin/src/components/Editor/index.module.scss
+++ b/packages/admin/src/components/Editor/index.module.scss
@@ -1,27 +1,7 @@
 .wrapper {
   :global {
-    .ck-toolbar {
-      border: 0 !important;
-      background: #fff !important;
+    .public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-listLTR:before {
+      top: 3px;
     }
-    .ck-toolbar__separator {
-      background-color: transparent !important;
-    }
-
-    div.ck-content {
-      border-width: 0 !important;
-      box-shadow: none !important;
-      min-height: calc(100vh - 66.5px - 40px - 48px - 48px) !important;
-
-      .table {
-        width: 100%;
-      }
-    }
-  }
-
-  .stats {
-    font-size: 0.8em;
-    text-align: center;
-    color: rgba(0, 0, 0, 0.55);
   }
 }
