--- a/packages/client/src/theme/reset.scss
+++ b/packages/client/src/theme/reset.scss
@@ -49,9 +49,10 @@ body {
 
 :global {
   * {
-    transition: background-color 0.1s linear, margin 0.25s linear,
-      opacity 0.25s linear, filter 0.25s linear, visibility 0.25s linear,
-      transform 0.25s linear, border-color 0.25s linear;
+    transition: background-color 0.2s ease-in-out, margin 0.2s ease-in-out,
+      opacity 0.2s ease-in-out, filter 0.2s ease-in-out,
+      visibility 0.2s ease-in-out, transform 0.2s ease-in-out,
+      border-color 0.2s ease-in-out;
   }
 
   @media (max-width: 768px) {
