feat(client): update comment style

--- a/packages/client/src/components/Comment/index.module.scss
+++ b/packages/client/src/components/Comment/index.module.scss
@@ -129,6 +129,14 @@
       main {
         > div.content {
           padding: 0.8em 0;
+
+          img {
+            max-width: 100%;
+          }
+
+          blockquote {
+            background-color: transparent;
+          }
         }
 
         div.meta {
