--- a/packages/admin/pages/page/editor/index.module.scss
+++ b/packages/admin/pages/page/editor/index.module.scss
@@ -51,17 +51,13 @@
 
   .content {
     overflow: hidden;
-
     > article {
-      margin: 24px 0;
       padding: 24px;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
-      background-color: #fff;
 
-      :global {
-        .bf-content {
-          min-height: calc(100vh - 66.5px - 48px - 48px - 99px);
-        }
+      > div {
+        padding: 16px 24px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
+        background-color: #fff;
       }
     }
   }
