--- a/packages/admin/src/theme/reset.scss
+++ b/packages/admin/src/theme/reset.scss
@@ -46,11 +46,26 @@ body {
 }
 
 :global {
-  // * {
-  //   transition: background-color 0.1s linear, margin 0.25s linear,
-  //     opacity 0.25s linear, filter 0.25s linear, visibility 0.25s linear,
-  //     transform 0.25s linear, border-color 0.25s linear;
-  // }
+  body {
+    --primary-color: #ff0064;
+    --link-color: #4299e1;
+    --border-radius: 2px;
+
+    // 亮色主题
+    --bg: #fff;
+    --bg-second: #fff;
+    --bg-body: #f4f5f5;
+    --bg-footer: #292525;
+    --bg-code: #23241f;
+    --main-text-color: rgba(0, 0, 0, 0.85);
+    --second-text-color: rgba(0, 0, 0, 0.65);
+    --disable-text-color: rgba(0, 0, 0, 0.45);
+    --border-color: rgba(178, 186, 194, 0.15);
+    --box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    --scrollbar-bg: #dadada;
+    --comment-editor-border-color: #d9d9d9; // 评论框所用编辑器边框颜色
+    --comment-editor-btn-disable-bg: #f5f5f5; // 评论框所用编辑器按钮禁用背景色
+  }
 
   @media (max-width: 768px) {
     .container {
