bugfix(client): fix md scss

--- a/packages/client/src/theme/var.scss
+++ b/packages/client/src/theme/var.scss
@@ -10,6 +10,7 @@
     --bg-body: #f4f5f5;
     --bg-footer: #292525;
     --bg-code: #23241f;
+    --blockquote-color: #fff;
     --main-text-color: rgba(0, 0, 0, 0.85);
     --second-text-color: rgba(0, 0, 0, 0.65);
     --disable-text-color: rgba(0, 0, 0, 0.45);
@@ -31,6 +32,7 @@
     --bg-body: var(--bg);
     --bg-footer: var(--bg);
     --bg-code: rgba(115, 124, 153, 0.2);
+    --blockquote-color: #fff;
     --main-text-color: rgba(255, 255, 255, 0.85);
     --second-text-color: rgba(255, 255, 255, 0.65);
     --disable-text-color: rgba(255, 255, 255, 0.45);
