--- a/packages/client/src/theme/markdown.scss
+++ b/packages/client/src/theme/markdown.scss
@@ -92,22 +92,21 @@
 
     blockquote {
       margin: 14px 0;
-      padding: 0 16px;
+      padding: 12px 16px;
       min-height: 20px;
 
       border-left-width: 4px;
       border-left-style: solid;
       border-left-color: var(--primary-color);
 
+      color: var(--blockquote-color);
       background-color: var(--bg-code);
       border-bottom-right-radius: var(--border-radius);
       border-top-right-radius: var(--border-radius);
     }
 
-    blockquote p,
-    blockquote ul,
-    blockquote ol {
-      color: #999;
+    blockquote * {
+      color: inherit;
     }
 
     blockquote > :first-child {
