bugfix(client): fix archive style

--- a/packages/client/pages/archives/index.module.scss
+++ b/packages/client/pages/archives/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../src/theme/var.scss';
 
 .wrapper {
-  background-color: var(--bg);
+  background-color: var(--bg-body);
 }
 
 .container {
