--- a/packages/client/src/theme/markdown.scss
+++ b/packages/client/src/theme/markdown.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     color: var(--main-text-color) !important;
-    background-color: var(--bg) !important;
+    // background-color: var(--bg) !important;
 
     i,
     cite,
