--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -1,5 +1,3 @@
-@import '../../theme/var.scss';
-
 .wrapper {
   &.asCard {
     display: flex;
@@ -126,7 +124,7 @@
       .imgWrapper {
         flex: 0 0 auto;
         width: 220px;
-        height: 110px;
+        min-height: 110px;
         margin-right: 1rem;
         border-radius: var(--border-radius);
         overflow: hidden;
