--- a/packages/client/src/theme/reset.scss
+++ b/packages/client/src/theme/reset.scss
@@ -1,60 +1,67 @@
 @import './var.scss';
 
-::-webkit-scrollbar-track {
-  border-radius: 0;
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background-color: var(--scrollbar-bg);
-  transition: all 0.2s;
-  border-radius: 0.5rem;
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-  background: transparent;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-p {
-  list-style: none;
-}
-
-a {
-  color: inherit;
-
-  &:hover {
-    color: inherit;
-  }
-}
-
-html {
-  text-size-adjust: 100% !important;
-}
-
-body {
-  font-family: 'Nunito', 'Helvetica', Arial, sans-serif;
-  color: var(--main-text-color);
-  background-color: var(--bg);
-  line-height: 1.75em;
-  height: auto;
-  overflow-x: hidden;
-}
-
 :global {
   * {
     transition: background-color 0.2s ease-in-out, margin 0.2s ease-in-out,
       opacity 0.2s ease-in-out, filter 0.2s ease-in-out,
       visibility 0.2s ease-in-out, transform 0.2s ease-in-out,
       border-color 0.2s ease-in-out;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 0;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0;
+    background-color: var(--scrollbar-bg);
+    transition: all 0.2s;
+    border-radius: 0.5rem;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background: transparent;
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  p {
+    list-style: none;
+  }
+
+  a {
+    color: inherit;
+
+    &:hover {
+      color: inherit;
+    }
+  }
+
+  html {
+    text-size-adjust: 100% !important;
+  }
+
+  body {
+    font-family: 'Nunito', 'Helvetica', Arial, sans-serif;
+    color: var(--main-text-color);
+    background-color: var(--bg);
+    line-height: 1.75em;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  #__next {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   @media (max-width: 768px) {
